# ai-workflow-hub

./: .content-manifest.json  .env.example  .envsample  .eslintrc.json  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SKILLS.md  electron.vite.config.ts  eslint.config.js  jest.config.json  node_modules  package-lock.json  package.json  project-meta.yaml  screenshot.mjs  tailwind.config.js  tsconfig.node.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.pr-cache/: coverage.md  diff-review.md  review.md  risk.md
changelog.d/: 2026-06-15-feat-mvp-hardening.md  2026-06-16-feat-expense-reimbursement-form.md  2026-06-16-feat-travel-reimbursement-form.md  2026-06-17-feat-bookkeeping-voucher-folders.md  2026-06-17-feat-calendar-event-creator.md  2026-06-17-feat-file-organizer-run.md  2026-06-17-feat-loan-agreement-modal.md  2026-06-17-feat-native-app-packaging.md  2026-06-17-feat-premium-redesign.md  2026-06-17-feat-reading-list-workflow.md  2026-06-17-feat-scaffold-setup-command.md  2026-06-17-feat-scraper-workflow.md  2026-06-17-feat-transcribe-to-claude.md  2026-06-17-feat-ui-enhancements.md  2026-06-17-feat-voice-transcriber.md  2026-06-17-feat-workspace-badge-cards.md  2026-06-17-maint-rename-to-workflow-hub.md  2026-06-18-feat-bundle-registry-fix.md  2026-06-18-feat-loan-agreement-expand.md  2026-06-18-feat-loan-modal-other-option.md  2026-06-18-feat-modal-version-rule.md  2026-06-18-fix-node-modules-symlink.md  2026-06-18-fix-stage-all-files.md  2026-06-19-feat-employee-gifts-tracking.md  2026-06-20-feat-finn-job-tracker.md  2026-06-20-feat-job-strategy-workflow.md  2026-06-21-feat-contrast-fix.md  2026-06-21-feat-semantic-search.md  2026-06-21-feat-switch-embedding-model.md  2026-06-21-feat-workflow-availability.md  2026-06-21-maint-machine-config-tests.md  2026-06-22-feat-calendar-multi-screenshot.md  2026-06-26-feat-local-vision-service.md  2026-06-27-feat-cold-outreach-system.md  2026-06-30-feat-fiken-mcp.md  2026-06-30-feat-install-after-pr.md
cli/: index.ts
clustering/: engine.ts
registry/: workflows.yaml
workflows/meeting-notes-summariser/: .envsample  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SKILLS.md  project-meta.yaml  pyproject.toml
workflows/meeting-notes-summariser/.claude/rules/: design-doc-maintenance.md  practices.md  script-makefile-parity.md  stage-detection-and-enforcement.md  test-coverage-tiers.md
workflows/meeting-notes-summariser/.claude/scripts/: get-pr-commit-log.sh  pr-comment-agent-coverage.sh  validate-metadata-sync.sh
workflows/meeting-notes-summariser/.claude/skills/practices/: _a2-dependency-management.md  _c1-code-review.md
workflows/meeting-notes-summariser/.claude/skills/prd/: SKILL.md
workflows/meeting-notes-summariser/.claude/skills/prioritize/: SKILL.md
workflows/meeting-notes-summariser/src/meeting_notes_summariser/: __main__.py  main.py
workflows/meeting-notes-summariser/tests/: TEST_PARADIGM.md  conftest.py  test_code_quality.py  test_main.py  test_smoke.py  test_structure.py
workflows/nda-drafter/: .envsample  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  SECURITY.md  SKILLS.md  project-meta.yaml  pyproject.toml
workflows/nda-drafter/.claude/guides/: agent-teams.md  claude-md.md  context-compaction.md  keybindings.md
workflows/nda-drafter/.claude/rules/: 02-venv-before-run.md  explanation-crossroads.md  pr-versioning.md  task.md  world-class-development-standard.md
workflows/nda-drafter/.claude/scripts/: check-active-prds.sh  ci-local-parallel.sh  cleanup-agent-tasks.sh  next-docs.sh  post-edit-validate-yaml.sh  promote.sh  retro-compliance.sh  upgrade-branching.sh
workflows/nda-drafter/.claude/skills/handover/: SKILL.md
workflows/nda-drafter/.claude/skills/retro/: SKILL.md
workflows/nda-drafter/src/nda_drafter/: __main__.py  main.py
workflows/nda-drafter/tests/: TEST_PARADIGM.md  conftest.py  test_code_quality.py  test_main.py  test_smoke.py  test_structure.py
(+491 files in other folders)
