[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-notes-summariser"
version = "0.1.0"
description = "Converts raw meeting transcripts into structured summaries with decisions and action items"
license = {text = "All Rights Reserved"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
meeting_notes_summariser = "meeting_notes_summariser.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["meeting_notes_summariser*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests with no filesystem or subprocess dependencies",
    "integration: Tests requiring filesystem fixtures or multi-module interaction",
    "e2e: End-to-end tests through the CLI or API layer",
    "edge_case: Boundary conditions, unusual inputs, empty or missing data",
    "error_handling: Graceful degradation, failed subprocesses, timeouts",
    "security: Permission patterns, secret detection, access control",
    "config: Configuration loading, schema validation, settings",
    "smoke: Basic import and health checks",
    "quality: Code quality and structural checks",
    "structure: Project structure and consistency checks",
    "test_value: Test quality annotation (essential, thorough, defensive, structural)",
]

[tool.coverage.run]
source = ["meeting_notes_summariser"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
precision = 1


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

